--- a/powercord_manifest.json
+++ b/powercord_manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "CreArts Theme v1.2.1 (Beta) (Guilded)",
+    "name": "CreArts v1.2.1 (Beta) (Guilded)",
     "description": "Guilded Edition",
     "version": "1.2.1",
     "author": "CorellanStoma#1996",
